parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> <empty>
Rule 2     inicio -> sentencia inicio
Rule 3     inicio -> declaracion_funcion inicio
Rule 4     sentencia -> asignacion PUNTOYCOMA
Rule 5     sentencia -> expresion PUNTOYCOMA
Rule 6     sentencia -> condicional
Rule 7     sentencia -> print PUNTOYCOMA
Rule 8     sentencia -> ciclo
Rule 9     sentencia -> sentencia_yield
Rule 10    declaracion_funcion -> DECREE IDENTIFICADOR PARIZQ parametros_opcionales PARDER LLAVEIZQ bloque LLAVEDER
Rule 11    parametros_opcionales -> <empty>
Rule 12    parametros_opcionales -> parametros_list
Rule 13    parametros_list -> IDENTIFICADOR
Rule 14    parametros_list -> IDENTIFICADOR COMA parametros_list
Rule 15    sentencia_yield -> YIELD expresion PUNTOYCOMA
Rule 16    sentencia_yield -> YIELD PUNTOYCOMA
Rule 17    asignacion -> IDENTIFICADOR ASIGNAR expresion
Rule 18    expresion -> expresion UNIR expresion
Rule 19    expresion -> expresion SUMA expresion
Rule 20    expresion -> expresion RESTA expresion
Rule 21    expresion -> expresion MULTIPLICACION expresion
Rule 22    expresion -> expresion DIVISION expresion
Rule 23    expresion -> expresion MODULO expresion
Rule 24    expresion -> expresion MAYOR expresion
Rule 25    expresion -> expresion MENOR expresion
Rule 26    expresion -> expresion MAYORIGUAL expresion
Rule 27    expresion -> expresion MENORIGUAL expresion
Rule 28    expresion -> expresion IGUAL expresion
Rule 29    expresion -> expresion DESIGUAL expresion
Rule 30    expresion -> expresion AND expresion
Rule 31    expresion -> expresion OR expresion
Rule 32    expresion -> NOT expresion
Rule 33    condicional -> IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
Rule 34    condicional -> IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER
Rule 35    ciclo -> WHILE PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
Rule 36    ciclo -> FOR PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion PARDER LLAVEIZQ bloque LLAVEDER
Rule 37    bloque -> <empty>
Rule 38    bloque -> sentencia bloque
Rule 39    expresion -> PARIZQ expresion PARDER
Rule 40    expresion -> CADENA
Rule 41    expresion -> NUMERO
Rule 42    expresion -> IDENTIFICADOR
Rule 43    expresion -> MENOS expresion
Rule 44    expresiones_list -> expresion
Rule 45    expresiones_list -> expresion COMA expresiones_list
Rule 46    argumentos_opcionales -> <empty>
Rule 47    argumentos_opcionales -> expresiones_list
Rule 48    print -> PRINT PARIZQ expresiones_list PARDER
Rule 49    expresion -> PARIAS PARIZQ IDENTIFICADOR PARDER
Rule 50    expresion -> INQUIRE PARIZQ expresion PARDER
Rule 51    expresion -> CONQUISTAR PARIZQ expresion COMA expresion COMA expresion PARDER
Rule 52    expresion -> IDENTIFICADOR PARIZQ argumentos_opcionales PARDER

Terminals, with rules where they appear

AND                  : 30
ASIGNAR              : 17
CADENA               : 40
COMA                 : 14 45 51 51
CONQUISTAR           : 51
DECREE               : 10
DESIGUAL             : 29
DIVISION             : 22
ELSE                 : 34
FOR                  : 36
IDENTIFICADOR        : 10 13 14 17 42 49 52
IF                   : 33 34
IGUAL                : 28
INQUIRE              : 50
LLAVEDER             : 10 33 34 34 35 36
LLAVEIZQ             : 10 33 34 34 35 36
MAYOR                : 24
MAYORIGUAL           : 26
MENOR                : 25
MENORIGUAL           : 27
MENOS                : 43
MODULO               : 23
MULTIPLICACION       : 21
NOT                  : 32
NUMERO               : 41
OR                   : 31
PARDER               : 10 33 34 35 36 39 48 49 50 51 52
PARIAS               : 49
PARIZQ               : 10 33 34 35 36 39 48 49 50 51 52
PRINT                : 48
PUNTOYCOMA           : 4 5 7 15 16 36 36
RESTA                : 20
SUMA                 : 19
UNIR                 : 18
WHILE                : 35
YIELD                : 15 16
error                : 

Nonterminals, with rules where they appear

argumentos_opcionales : 52
asignacion           : 4 36 36
bloque               : 10 33 34 34 35 36 38
ciclo                : 8
condicional          : 6
declaracion_funcion  : 3
expresion            : 5 15 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 33 34 35 36 39 43 44 45 50 51 51 51
expresiones_list     : 45 47 48
inicio               : 2 3 0
parametros_list      : 12 14
parametros_opcionales : 10
print                : 7
sentencia            : 2 38
sentencia_yield      : 9

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> .
    (2) inicio -> . sentencia inicio
    (3) inicio -> . declaracion_funcion inicio
    (4) sentencia -> . asignacion PUNTOYCOMA
    (5) sentencia -> . expresion PUNTOYCOMA
    (6) sentencia -> . condicional
    (7) sentencia -> . print PUNTOYCOMA
    (8) sentencia -> . ciclo
    (9) sentencia -> . sentencia_yield
    (10) declaracion_funcion -> . DECREE IDENTIFICADOR PARIZQ parametros_opcionales PARDER LLAVEIZQ bloque LLAVEDER
    (17) asignacion -> . IDENTIFICADOR ASIGNAR expresion
    (18) expresion -> . expresion UNIR expresion
    (19) expresion -> . expresion SUMA expresion
    (20) expresion -> . expresion RESTA expresion
    (21) expresion -> . expresion MULTIPLICACION expresion
    (22) expresion -> . expresion DIVISION expresion
    (23) expresion -> . expresion MODULO expresion
    (24) expresion -> . expresion MAYOR expresion
    (25) expresion -> . expresion MENOR expresion
    (26) expresion -> . expresion MAYORIGUAL expresion
    (27) expresion -> . expresion MENORIGUAL expresion
    (28) expresion -> . expresion IGUAL expresion
    (29) expresion -> . expresion DESIGUAL expresion
    (30) expresion -> . expresion AND expresion
    (31) expresion -> . expresion OR expresion
    (32) expresion -> . NOT expresion
    (39) expresion -> . PARIZQ expresion PARDER
    (40) expresion -> . CADENA
    (41) expresion -> . NUMERO
    (42) expresion -> . IDENTIFICADOR
    (43) expresion -> . MENOS expresion
    (49) expresion -> . PARIAS PARIZQ IDENTIFICADOR PARDER
    (50) expresion -> . INQUIRE PARIZQ expresion PARDER
    (51) expresion -> . CONQUISTAR PARIZQ expresion COMA expresion COMA expresion PARDER
    (52) expresion -> . IDENTIFICADOR PARIZQ argumentos_opcionales PARDER
    (33) condicional -> . IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
    (34) condicional -> . IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER
    (48) print -> . PRINT PARIZQ expresiones_list PARDER
    (35) ciclo -> . WHILE PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
    (36) ciclo -> . FOR PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion PARDER LLAVEIZQ bloque LLAVEDER
    (15) sentencia_yield -> . YIELD expresion PUNTOYCOMA
    (16) sentencia_yield -> . YIELD PUNTOYCOMA

    $end            reduce using rule 1 (inicio -> .)
    DECREE          shift and go to state 10
    IDENTIFICADOR   shift and go to state 11
    NOT             shift and go to state 13
    PARIZQ          shift and go to state 12
    CADENA          shift and go to state 14
    NUMERO          shift and go to state 15
    MENOS           shift and go to state 16
    PARIAS          shift and go to state 17
    INQUIRE         shift and go to state 18
    CONQUISTAR      shift and go to state 19
    IF              shift and go to state 20
    PRINT           shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    YIELD           shift and go to state 24

    inicio                         shift and go to state 1
    sentencia                      shift and go to state 2
    declaracion_funcion            shift and go to state 3
    asignacion                     shift and go to state 4
    expresion                      shift and go to state 5
    condicional                    shift and go to state 6
    print                          shift and go to state 7
    ciclo                          shift and go to state 8
    sentencia_yield                shift and go to state 9

state 1

    (0) S' -> inicio .



state 2

    (2) inicio -> sentencia . inicio
    (1) inicio -> .
    (2) inicio -> . sentencia inicio
    (3) inicio -> . declaracion_funcion inicio
    (4) sentencia -> . asignacion PUNTOYCOMA
    (5) sentencia -> . expresion PUNTOYCOMA
    (6) sentencia -> . condicional
    (7) sentencia -> . print PUNTOYCOMA
    (8) sentencia -> . ciclo
    (9) sentencia -> . sentencia_yield
    (10) declaracion_funcion -> . DECREE IDENTIFICADOR PARIZQ parametros_opcionales PARDER LLAVEIZQ bloque LLAVEDER
    (17) asignacion -> . IDENTIFICADOR ASIGNAR expresion
    (18) expresion -> . expresion UNIR expresion
    (19) expresion -> . expresion SUMA expresion
    (20) expresion -> . expresion RESTA expresion
    (21) expresion -> . expresion MULTIPLICACION expresion
    (22) expresion -> . expresion DIVISION expresion
    (23) expresion -> . expresion MODULO expresion
    (24) expresion -> . expresion MAYOR expresion
    (25) expresion -> . expresion MENOR expresion
    (26) expresion -> . expresion MAYORIGUAL expresion
    (27) expresion -> . expresion MENORIGUAL expresion
    (28) expresion -> . expresion IGUAL expresion
    (29) expresion -> . expresion DESIGUAL expresion
    (30) expresion -> . expresion AND expresion
    (31) expresion -> . expresion OR expresion
    (32) expresion -> . NOT expresion
    (39) expresion -> . PARIZQ expresion PARDER
    (40) expresion -> . CADENA
    (41) expresion -> . NUMERO
    (42) expresion -> . IDENTIFICADOR
    (43) expresion -> . MENOS expresion
    (49) expresion -> . PARIAS PARIZQ IDENTIFICADOR PARDER
    (50) expresion -> . INQUIRE PARIZQ expresion PARDER
    (51) expresion -> . CONQUISTAR PARIZQ expresion COMA expresion COMA expresion PARDER
    (52) expresion -> . IDENTIFICADOR PARIZQ argumentos_opcionales PARDER
    (33) condicional -> . IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
    (34) condicional -> . IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER
    (48) print -> . PRINT PARIZQ expresiones_list PARDER
    (35) ciclo -> . WHILE PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
    (36) ciclo -> . FOR PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion PARDER LLAVEIZQ bloque LLAVEDER
    (15) sentencia_yield -> . YIELD expresion PUNTOYCOMA
    (16) sentencia_yield -> . YIELD PUNTOYCOMA

    $end            reduce using rule 1 (inicio -> .)
    DECREE          shift and go to state 10
    IDENTIFICADOR   shift and go to state 11
    NOT             shift and go to state 13
    PARIZQ          shift and go to state 12
    CADENA          shift and go to state 14
    NUMERO          shift and go to state 15
    MENOS           shift and go to state 16
    PARIAS          shift and go to state 17
    INQUIRE         shift and go to state 18
    CONQUISTAR      shift and go to state 19
    IF              shift and go to state 20
    PRINT           shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    YIELD           shift and go to state 24

    sentencia                      shift and go to state 2
    inicio                         shift and go to state 25
    declaracion_funcion            shift and go to state 3
    asignacion                     shift and go to state 4
    expresion                      shift and go to state 5
    condicional                    shift and go to state 6
    print                          shift and go to state 7
    ciclo                          shift and go to state 8
    sentencia_yield                shift and go to state 9

state 3

    (3) inicio -> declaracion_funcion . inicio
    (1) inicio -> .
    (2) inicio -> . sentencia inicio
    (3) inicio -> . declaracion_funcion inicio
    (4) sentencia -> . asignacion PUNTOYCOMA
    (5) sentencia -> . expresion PUNTOYCOMA
    (6) sentencia -> . condicional
    (7) sentencia -> . print PUNTOYCOMA
    (8) sentencia -> . ciclo
    (9) sentencia -> . sentencia_yield
    (10) declaracion_funcion -> . DECREE IDENTIFICADOR PARIZQ parametros_opcionales PARDER LLAVEIZQ bloque LLAVEDER
    (17) asignacion -> . IDENTIFICADOR ASIGNAR expresion
    (18) expresion -> . expresion UNIR expresion
    (19) expresion -> . expresion SUMA expresion
    (20) expresion -> . expresion RESTA expresion
    (21) expresion -> . expresion MULTIPLICACION expresion
    (22) expresion -> . expresion DIVISION expresion
    (23) expresion -> . expresion MODULO expresion
    (24) expresion -> . expresion MAYOR expresion
    (25) expresion -> . expresion MENOR expresion
    (26) expresion -> . expresion MAYORIGUAL expresion
    (27) expresion -> . expresion MENORIGUAL expresion
    (28) expresion -> . expresion IGUAL expresion
    (29) expresion -> . expresion DESIGUAL expresion
    (30) expresion -> . expresion AND expresion
    (31) expresion -> . expresion OR expresion
    (32) expresion -> . NOT expresion
    (39) expresion -> . PARIZQ expresion PARDER
    (40) expresion -> . CADENA
    (41) expresion -> . NUMERO
    (42) expresion -> . IDENTIFICADOR
    (43) expresion -> . MENOS expresion
    (49) expresion -> . PARIAS PARIZQ IDENTIFICADOR PARDER
    (50) expresion -> . INQUIRE PARIZQ expresion PARDER
    (51) expresion -> . CONQUISTAR PARIZQ expresion COMA expresion COMA expresion PARDER
    (52) expresion -> . IDENTIFICADOR PARIZQ argumentos_opcionales PARDER
    (33) condicional -> . IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
    (34) condicional -> . IF PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER
    (48) print -> . PRINT PARIZQ expresiones_list PARDER
    (35) ciclo -> . WHILE PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
    (36) ciclo -> . FOR PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion PARDER LLAVEIZQ bloque LLAVEDER
    (15) sentencia_yield -> . YIELD expresion PUNTOYCOMA
    (16) sentencia_yield -> . YIELD PUNTOYCOMA

    $end            reduce using rule 1 (inicio -> .)
    DECREE          shift and go to state 10
    IDENTIFICADOR   shift and go to state 11
    NOT             shift and go to state 13
    PARIZQ          shift and go to state 12
    CADENA          shift and go to state 14
    NUMERO          shift and go to state 15
    MENOS           shift and go to state 16
    PARIAS          shift and go to state 17
    INQUIRE         shift and go to state 18
    CONQUISTAR      shift and go to state 19
    IF              shift and go to state 20
    PRINT           shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    YIELD           shift and go to state 24

    declaracion_funcion            shift and go to state 3
    inicio                         shift and go to state 26
    sentencia                      shift and go to state 2
    asignacion                     shift and go to state 4
    expresion                      shift and go to state 5
    condicional                    shift and go to state 6
    print                          shift and go to state 7
    ciclo                          shift and go to state 8
    sentencia_yield                shift and go to state 9

state 4

    (4) sentencia -> asignacion . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 27


state 5

    (5) sentencia -> expresion . PUNTOYCOMA
    (18) expresion -> expresion . UNIR expresion
    (19) expresion -> expresion . SUMA expresion
    (20) expresion -> expresion . RESTA expresion
    (21) expresion -> expresion . MULTIPLICACION expresion
    (22) expresion -> expresion . DIVISION expresion
    (23) expresion -> expresion . MODULO expresion
    (24) expresion -> expresion . MAYOR expresion
    (25) expresion -> expresion . MENOR expresion
    (26) expresion -> expresion . MAYORIGUAL expresion
    (27) expresion -> expresion . MENORIGUAL expresion
    (28) expresion -> expresion . IGUAL expresion
    (29) expresion -> expresion . DESIGUAL expresion
    (30) expresion -> expresion . AND expresion
    (31) expresion -> expresion . OR expresion

    PUNTOYCOMA      shift and go to state 28
    UNIR            shift and go to state 29
    SUMA            shift and go to state 30
    RESTA           shift and go to state 31
    MULTIPLICACION  shift and go to state 32
    DIVISION        shift and go to state 33
    MODULO          shift and go to state 34
    MAYOR           shift and go to state 35
    MENOR           shift and go to state 36
    MAYORIGUAL      shift and go to state 37
    MENORIGUAL      shift and go to state 38
    IGUAL           shift and go to state 39
    DESIGUAL        shift and go to state 40
    AND             shift and go to state 41
    OR              shift and go to state 42


state 6

    (6) sentencia -> condicional .

    DECREE          reduce using rule 6 (sentencia -> condicional .)
    IDENTIFICADOR   reduce using rule 6 (sentencia -> condicional .)
    NOT             reduce using rule 6 (sentencia -> condicional .)
    PARIZQ          reduce using rule 6 (sentencia -> condicional .)
    CADENA          reduce using rule 6 (sentencia -> condicional .)
    NUMERO          reduce using rule 6 (sentencia -> condicional .)
    MENOS           reduce using rule 6 (sentencia -> condicional .)
    PARIAS          reduce using rule 6 (sentencia -> condicional .)
    INQUIRE         reduce using rule 6 (sentencia -> condicional .)
    CONQUISTAR      reduce using rule 6 (sentencia -> condicional .)
    IF              reduce using rule 6 (sentencia -> condicional .)
    PRINT           reduce using rule 6 (sentencia -> condicional .)
    WHILE           reduce using rule 6 (sentencia -> condicional .)
    FOR             reduce using rule 6 (sentencia -> condicional .)
    YIELD           reduce using rule 6 (sentencia -> condicional .)
    $end            reduce using rule 6 (sentencia -> condicional .)
    LLAVEDER        reduce using rule 6 (sentencia -> condicional .)


state 7

    (7) sentencia -> print . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 43


state 8

    (8) sentencia -> ciclo .

    DECREE          reduce using rule 8 (sentencia -> ciclo .)
    IDENTIFICADOR   reduce using rule 8 (sentencia -> ciclo .)
    NOT             reduce using rule 8 (sentencia -> ciclo .)
    PARIZQ          reduce using rule 8 (sentencia -> ciclo .)
    CADENA          reduce using rule 8 (sentencia -> ciclo .)
    NUMERO          reduce using rule 8 (sentencia -> ciclo .)
    MENOS           reduce using rule 8 (sentencia -> ciclo .)
    PARIAS          reduce using rule 8 (sentencia -> ciclo .)
    INQUIRE         reduce using rule 8 (sentencia -> ciclo .)
    CONQUISTAR      reduce using rule 8 (sentencia -> ciclo .)
    IF              reduce using rule 8 (sentencia -> ciclo .)
    PRINT           reduce using rule 8 (sentencia -> ciclo .)
    WHILE           reduce using rule 8 (sentencia -> ciclo .)
    FOR             reduce using rule 8 (sentencia -> ciclo .)
    YIELD           reduce using rule 8 (sentencia -> ciclo .)
    $end            reduce using rule 8 (sentencia -> ciclo .)
    LLAVEDER        reduce using rule 8 (sentencia -> ciclo .)


state 9

    (9) sentencia -> sentencia_yield .

    DECREE          reduce using rule 9 (sentencia -> sentencia_yield .)
    IDENTIFICADOR   reduce using rule 9 (sentencia -> sentencia_yield .)
    NOT             reduce using rule 9 (sentencia -> sentencia_yield .)
    PARIZQ          reduce using rule 9 (sentencia -> sentencia_yield .)
    CADENA          reduce using rule 9 (sentencia -> sentencia_yield .)
    NUMERO          reduce using rule 9 (sentencia -> sentencia_yield .)
    MENOS           reduce using rule 9 (sentencia -> sentencia_yield .)
    PARIAS          reduce using rule 9 (sentencia -> sentencia_yield .)
    INQUIRE         reduce using rule 9 (sentencia -> sentencia_yield .)
    CONQUISTAR      reduce using rule 9 (sentencia -> sentencia_yield .)
    IF              reduce using rule 9 (sentencia -> sentencia_yield .)
    PRINT           reduce using rule 9 (sentencia -> sentencia_yield .)
    WHILE           reduce using rule 9 (sentencia -> sentencia_yield .)
    FOR             reduce using rule 9 (sentencia -> sentencia_yield .)
    YIELD           reduce using rule 9 (sentencia -> sentencia_yield .)
    $end            reduce using rule 9 (sentencia -> sentencia_yield .)
    LLAVEDER        reduce using rule 9 (sentencia -> sentencia_yield .)


state 10

    (10) declaracion_funcion -> DECREE . IDENTIFICADOR PARIZQ parametros_opcionales PARDER LLAVEIZQ bloque LLAVEDER

    IDENTIFICADOR   shift and go to state 44


state 11

    (17) asignacion -> IDENTIFICADOR . ASIGNAR expresion
    (42) expresion -> IDENTIFICADOR .
    (52) expresion -> IDENTIFICADOR . PARIZQ argumentos_opcionales PARDER

    ASIGNAR         shift and go to state 45
    PUNTOYCOMA      reduce using rule 42 (expresion -> IDENTIFICADOR .)
    UNIR            reduce using rule 42 (expresion -> IDENTIFICADOR .)
    SUMA            reduce using rule 42 (expresion -> IDENTIFICADOR .)
    RESTA           reduce using rule 42 (expresion -> IDENTIFICADOR .)
    MULTIPLICACION  reduce using rule 42 (expresion -> IDENTIFICADOR .)
    DIVISION        reduce using rule 42 (expresion -> IDENTIFICADOR .)
    MODULO          reduce using rule 42 (expresion -> IDENTIFICADOR .)
    MAYOR           reduce using rule 42 (expresion -> IDENTIFICADOR .)
    MENOR           reduce using rule 42 (expresion -> IDENTIFICADOR .)
    MAYORIGUAL      reduce using rule 42 (expresion -> IDENTIFICADOR .)
    MENORIGUAL      reduce using rule 42 (expresion -> IDENTIFICADOR .)
    IGUAL           reduce using rule 42 (expresion -> IDENTIFICADOR .)
    DESIGUAL        reduce using rule 42 (expresion -> IDENTIFICADOR .)
    AND             reduce using rule 42 (expresion -> IDENTIFICADOR .)
    OR              reduce using rule 42 (expresion -> IDENTIFICADOR .)
    PARIZQ          shift and go to state 46


state 12

    (39) expresion -> PARIZQ . expresion PARDER
    (18) expresion -> . expresion UNIR expresion
    (19) expresion -> . expresion SUMA expresion
    (20) expresion -> . expresion RESTA expresion
    (21) expresion -> . expresion MULTIPLICACION expresion
    (22) expresion -> . expresion DIVISION expresion
    (23) expresion -> . expresion MODULO expresion
    (24) expresion -> . expresion MAYOR expresion
    (25) expresion -> . expresion MENOR expresion
    (26) expresion -> . expresion MAYORIGUAL expresion
    (27) expresion -> . expresion MENORIGUAL expresion
    (28) expresion -> . expresion IGUAL expresion
    (29) expresion -> . expresion DESIGUAL expresion
    (30) expresion -> . expresion AND expresion
    (31) expresion -> . expresion OR expresion
    (32) expresion -> . NOT expresion
    (39) expresion -> . PARIZQ expresion PARDER
    (40) expresion -> . CADENA
    (41) expresion -> . NUMERO
    (42) expresion -> . IDENTIFICADOR
    (43) expresion -> . MENOS expresion
    (49) expresion -> . PARIAS PARIZQ IDENTIFICADOR PARDER
    (50) expresion -> . INQUIRE PARIZQ expresion PARDER
    (51) expresion -> . CONQUISTAR PARIZQ expresion COMA expresion COMA expresion PARDER
    (52) expresion -> . IDENTIFICADOR PARIZQ argumentos_opcionales PARDER

    NOT             shift and go to state 13
    PARIZQ          shift and go to state 12
    CADENA          shift and go to state 14
    NUMERO          shift and go to state 15
    IDENTIFICADOR   shift and go to state 48
    MENOS           shift and go to state 16
    PARIAS          shift and go to state 17
    INQUIRE         shift and go to state 18
    CONQUISTAR      shift and go to state 19

    expresion                      shift and go to state 47

state 13

    (32) expresion -> NOT . expresion
    (18) expresion -> . expresion UNIR expresion
    (19) expresion -> . expresion SUMA expresion
    (20) expresion -> . expresion RESTA expresion
    (21) expresion -> . expresion MULTIPLICACION expresion
    (22) expresion -> . expresion DIVISION expresion
    (23) expresion -> . expresion MODULO expresion
    (24) expresion -> . expresion MAYOR expresion
    (25) expresion -> . expresion MENOR expresion
    (26) expresion -> . expresion MAYORIGUAL expresion
    (27) expresion -> . expresion MENORIGUAL expresion
    (28) expresion -> . expresion IGUAL expresion
    (29) expresion -> . expresion DESIGUAL expresion
    (30) expresion -> . expresion AND expresion
    (31) expresion -> . expresion OR expresion
    (32) expresion -> . NOT expresion
    (39) expresion -> . PARIZQ expresion PARDER
    (40) expresion -> . CADENA
    (41) expresion -> . NUMERO
    (42) expresion -> . IDENTIFICADOR
    (43) expresion -> . MENOS expresion
    (49) expresion -> . PARIAS PARIZQ IDENTIFICADOR PARDER
    (50) expresion -> . INQUIRE PARIZQ expresion PARDER
    (51) expresion -> . CONQUISTAR PARIZQ expresion COMA expresion COMA expresion PARDER
    (52) expresion -> . IDENTIFICADOR PARIZQ argumentos_opcionales PARDER

    NOT             shift and go to state 13
    PARIZQ          shift and go to state 12
    CADENA          shift and go to state 14
    NUMERO          shift and go to state 15
    IDENTIFICADOR   shift and go to state 48
    MENOS           shift and go to state 16
    PARIAS          shift and go to state 17
    INQUIRE         shift and go to state 18
    CONQUISTAR      shift and go to state 19

    expresion                      shift and go to state 49

state 14

    (40) expresion -> CADENA .

    PUNTOYCOMA      reduce using rule 40 (expresion -> CADENA .)
    UNIR            reduce using rule 40 (expresion -> CADENA .)
    SUMA            reduce using rule 40 (expresion -> CADENA .)
    RESTA           reduce using rule 40 (expresion -> CADENA .)
    MULTIPLICACION  reduce using rule 40 (expresion -> CADENA .)
    DIVISION        reduce using rule 40 (expresion -> CADENA .)
    MODULO          reduce using rule 40 (expresion -> CADENA .)
    MAYOR           reduce using rule 40 (expresion -> CADENA .)
    MENOR           reduce using rule 40 (expresion -> CADENA .)
    MAYORIGUAL      reduce using rule 40 (expresion -> CADENA .)
    MENORIGUAL      reduce using rule 40 (expresion -> CADENA .)
    IGUAL           reduce using rule 40 (expresion -> CADENA .)
    DESIGUAL        reduce using rule 40 (expresion -> CADENA .)
    AND             reduce using rule 40 (expresion -> CADENA .)
    OR              reduce using rule 40 (expresion -> CADENA .)
    PARDER          reduce using rule 40 (expresion -> CADENA .)
    COMA            reduce using rule 40 (expresion -> CADENA .)


state 15

    (41) expresion -> NUMERO .

    PUNTOYCOMA      reduce using rule 41 (expresion -> NUMERO .)
    UNIR            reduce using rule 41 (expresion -> NUMERO .)
    SUMA            reduce using rule 41 (expresion -> NUMERO .)
    RESTA           reduce using rule 41 (expresion -> NUMERO .)
    MULTIPLICACION  reduce using rule 41 (expresion -> NUMERO .)
    DIVISION        reduce using rule 41 (expresion -> NUMERO .)
    MODULO          reduce using rule 41 (expresion -> NUMERO .)
    MAYOR           reduce using rule 41 (expresion -> NUMERO .)
    MENOR           reduce using rule 41 (expresion -> NUMERO .)
    MAYORIGUAL      reduce using rule 41 (expresion -> NUMERO .)
    MENORIGUAL      reduce using rule 41 (expresion -> NUMERO .)
    IGUAL           reduce using rule 41 (expresion -> NUMERO .)
    DESIGUAL        reduce using rule 41 (expresion -> NUMERO .)
    AND             reduce using rule 41 (expresion -> NUMERO .)
    OR              reduce using rule 41 (expresion -> NUMERO .)
    PARDER          reduce using rule 41 (expresion -> NUMERO .)
    COMA            reduce using rule 41 (expresion -> NUMERO .)


state 16

    (43) expresion -> MENOS . expresion
    (18) expresion -> . expresion UNIR expresion
    (19) expresion -> . expresion SUMA expresion
    (20) expresion -> . expresion RESTA expresion
    (21) expresion -> . expresion MULTIPLICACION expresion
    (22) expresion -> . expresion DIVISION expresion
    (23) expresion -> . expresion MODULO expresion
    (24) expresion -> . expresion MAYOR expresion
    (25) expresion -> . expresion MENOR expresion
    (26) expresion -> . expresion MAYORIGUAL expresion
    (27) expresion -> . expresion MENORIGUAL expresion
    (28) expresion -> . expresion IGUAL expresion
    (29) expresion -> . expresion DESIGUAL expresion
    (30) expresion -> . expresion AND expresion
    (31) expresion -> . expresion OR expresion
    (32) expresion -> . NOT expresion
    (39) expresion -> . PARIZQ expresion PARDER
    (40) expresion -> . CADENA
    (41) expresion -> . NUMERO
    (42) expresion -> . IDENTIFICADOR
    (43) expresion -> . MENOS expresion
    (49) expresion -> . PARIAS PARIZQ IDENTIFICADOR PARDER
    (50) expresion -> . INQUIRE PARIZQ expresion PARDER
    (51) expresion -> . CONQUISTAR PARIZQ expresion COMA expresion COMA expresion PARDER
    (52) expresion -> . IDENTIFICADOR PARIZQ argumentos_opcionales PARDER

    NOT             shift and go to state 13
    PARIZQ          shift and go to state 12
    CADENA          shift and go to state 14
    NUMERO          shift and go to state 15
    IDENTIFICADOR   shift and go to state 48
    MENOS           shift and go to state 16
    PARIAS          shift and go to state 17
    INQUIRE         shift and go to state 18
    CONQUISTAR      shift and go to state 19

    expresion                      shift and go to state 50

state 17

    (49) expresion -> PARIAS . PARIZQ IDENTIFICADOR PARDER

    PARIZQ          shift and go to state 51


state 18

    (50) expresion -> INQUIRE . PARIZQ expresion PARDER

    PARIZQ          shift and go to state 52


state 19

    (51) expresion -> CONQUISTAR . PARIZQ expresion COMA expresion COMA expresion PARDER

    PARIZQ          shift and go to state 53


state 20

    (33) condicional -> IF . PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER
    (34) condicional -> IF . PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER ELSE LLAVEIZQ bloque LLAVEDER

    PARIZQ          shift and go to state 54


state 21

    (48) print -> PRINT . PARIZQ expresiones_list PARDER

    PARIZQ          shift and go to state 55


state 22

    (35) ciclo -> WHILE . PARIZQ expresion PARDER LLAVEIZQ bloque LLAVEDER

    PARIZQ          shift and go to state 56


state 23

    (36) ciclo -> FOR . PARIZQ asignacion PUNTOYCOMA expresion PUNTOYCOMA asignacion PARDER LLAVEIZQ bloque LLAVEDER

    PARIZQ          shift and go to state 57


state 24

    (15) sentencia_yield -> YIELD . expresion PUNTOYCOMA
    (16) sentencia_yield -> YIELD . PUNTOYCOMA
    (18) expresion -> . expresion UNIR expresion
    (19) expresion -> . expresion SUMA expresion
    (20) expresion -> . expresion RESTA expresion
    (21) expresion -> . expresion MULTIPLICACION expresion
    (22) expresion -> . expresion DIVISION expresion
    (23) expresion -> . expresion MODULO expresion
    (24) expresion -> . expresion MAYOR expresion
    (25) expresion -> . expresion MENOR expresion
    (26) expresion -> . expresion MAYORIGUAL expresion
    (27) expresion -> . expresion MENORIGUAL expresion
    (28) expresion -> . expresion IGUAL expresion
    (29) expresion -> . expresion DESIGUAL expresion
    (30) expresion -> . expresion AND expresion
    (31) expresion -> . expresion OR expresion
    (32) expresion -> . NOT expresion
    (39) expresion -> . PARIZQ expresion PARDER
    (40) expresion -> . CADENA
    (41) expresion -> . NUMERO
    (42) expresion -> . IDENTIFICADOR
    (43) expresion -> . MENOS expresion
    (49) expresion -> . PARIAS PARIZQ IDENTIFICADOR PARDER
    (50) expresion -> . INQUIRE PARIZQ expresion PARDER
    (51) expresion -> . CONQUISTAR PARIZQ expresion COMA expresion COMA expresion PARDER
    (52) expresion -> . IDENTIFICADOR PARIZQ argumentos_opcionales PARDER

    PUNTOYCOMA      shift and go to state 59
    NOT             shift and go to state 13
    PARIZQ          shift and go to state 12
    CADENA          shift and go to state 14
    NUMERO          shift and go to state 15
    IDENTIFICADOR   shift and go to state 48
    MENOS           shift and go to state 16
    PARIAS          shift and go to state 17
    INQUIRE         shift and go to state 18
    CONQUISTAR      shift and go to state 19
